--- a/CleanArchitectureRxSwift/Base.lproj/Main.storyboard
+++ b/CleanArchitectureRxSwift/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Posts-->
         <scene sceneID="YpU-91-Fau">
             <objects>
-                <viewController storyboardIdentifier="PostsViewController" id="auy-Ot-dVB" customClass="PostsViewController" customModule="NetworkAndSecurity" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PostsViewController" id="auy-Ot-dVB" customClass="PostsViewController" customModule="CleanArchitectureRxSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="6rl-rl-TuX"/>
                         <viewControllerLayoutGuide type="bottom" id="uK1-Gd-f3U"/>
@@ -26,11 +26,11 @@
                                 <rect key="frame" x="0.0" y="-44" width="375" height="711"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostTableViewCell" rowHeight="82" id="wsn-Eu-k9m" customClass="PostTableViewCell" customModule="NetworkAndSecurity" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostTableViewCell" rowHeight="82" id="wsn-Eu-k9m" customClass="PostTableViewCell" customModule="CleanArchitectureRxSwift" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="82"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wsn-Eu-k9m" id="54K-Ut-RUc">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="81"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="81.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="irm-SF-QMY">
@@ -89,7 +89,7 @@
         <!--Create Post-->
         <scene sceneID="qxo-EW-u3K">
             <objects>
-                <viewController storyboardIdentifier="CreatePostViewController" id="5cc-iA-Jnx" customClass="CreatePostViewController" customModule="NetworkAndSecurity" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreatePostViewController" id="5cc-iA-Jnx" customClass="CreatePostViewController" customModule="CleanArchitectureRxSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="sBN-ec-OR0"/>
                         <viewControllerLayoutGuide type="bottom" id="eOO-i2-dpo"/>
@@ -99,7 +99,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="08o-WJ-vNx">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L5z-Fu-ZgZ">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
@@ -111,16 +111,16 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X2Z-wt-7I7">
-                                        <rect key="frame" x="0.0" y="30" width="375" height="573"/>
+                                        <rect key="frame" x="0.0" y="30" width="375" height="617"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sup-EB-s7A">
-                                                <rect key="frame" x="134" y="270" width="108" height="34"/>
+                                                <rect key="frame" x="134.5" y="292.5" width="107.5" height="33.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ehU-Zn-m5B">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="573"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -161,6 +161,80 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SKR-6a-nRg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1974" y="88"/>
+        </scene>
+        <!--Edit Post View Controller-->
+        <scene sceneID="ie6-yW-fhE">
+            <objects>
+                <viewController storyboardIdentifier="EditPostViewController" id="XLe-C8-AFl" customClass="EditPostViewController" customModule="CleanArchitectureRxSwift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fI0-mK-3Xb"/>
+                        <viewControllerLayoutGuide type="bottom" id="xow-Rr-xl3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IZX-6I-p0T">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="RPC-I8-JnV">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z0e-ow-m8L">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="wCH-uR-qEJ"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2eT-pu-18v">
+                                        <rect key="frame" x="0.0" y="30" width="375" height="617"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohM-j4-6aH">
+                                                <rect key="frame" x="134.5" y="292.5" width="107.5" height="33.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="vu6-3Q-g43">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="vu6-3Q-g43" secondAttribute="trailing" id="9Ie-xx-Skm"/>
+                                            <constraint firstItem="ohM-j4-6aH" firstAttribute="centerX" secondItem="2eT-pu-18v" secondAttribute="centerX" id="PDa-82-NBv"/>
+                                            <constraint firstItem="ohM-j4-6aH" firstAttribute="centerY" secondItem="2eT-pu-18v" secondAttribute="centerY" id="dlQ-d7-kTR"/>
+                                            <constraint firstItem="vu6-3Q-g43" firstAttribute="leading" secondItem="2eT-pu-18v" secondAttribute="leading" id="m1v-zu-4cr"/>
+                                            <constraint firstItem="vu6-3Q-g43" firstAttribute="top" secondItem="2eT-pu-18v" secondAttribute="top" id="qfG-w3-8nR"/>
+                                            <constraint firstAttribute="bottom" secondItem="vu6-3Q-g43" secondAttribute="bottom" id="x1o-2U-ybV"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="RPC-I8-JnV" secondAttribute="trailing" constant="-16" id="64V-cK-2RB"/>
+                            <constraint firstItem="RPC-I8-JnV" firstAttribute="leading" secondItem="IZX-6I-p0T" secondAttribute="leadingMargin" constant="-16" id="EFr-Ox-edM"/>
+                            <constraint firstItem="RPC-I8-JnV" firstAttribute="top" secondItem="fI0-mK-3Xb" secondAttribute="bottom" id="Xri-bt-txK"/>
+                            <constraint firstItem="xow-Rr-xl3" firstAttribute="top" secondItem="RPC-I8-JnV" secondAttribute="bottom" id="vII-Ik-wJg"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="FpO-rx-nwd">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="wmL-GG-UqC"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="detailsTextView" destination="vu6-3Q-g43" id="0CY-zu-MDS"/>
+                        <outlet property="editButton" destination="wmL-GG-UqC" id="cmt-p1-9HO"/>
+                        <outlet property="titleTextField" destination="Z0e-ow-m8L" id="7Xb-cG-ojy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CTv-4D-SR2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2657" y="88"/>
         </scene>
     </scenes>
 </document>
